Intégration API REST backend + appels HTTP frontend avec ThreadTasks - Sprint production